src/components/Timer/Timer.scss
@use "sass:color";
@import "constants/style.scss";

$timer-display-width: 114px;
$timer__content-height: 38px;
$timer__short-actions-height: 28px;

$timer__progress-bar-color: #6096ff;

.timer__container {
  height: 100%;
  display: flex;
  flex-direction: row;
  gap: 8px;
}

.timer__increment-button {
  position: relative;
  border: 0;
  background-color: $color-white;
  box-shadow: $box-shadow--light;
  border-radius: $rounded--full;
  height: 42px;
  width: 42px;
  color: white;
  cursor: pointer;
  display: grid;
  place-content: center;
  outline: none;
  transition: background-color 150ms linear;
  color: $color-black;

  &:hover {
    background-color: getLightHoverBackground($color-white);
  }

  &:focus-visible {
    outline: 2px solid $color-backlog-blue;
  }
}

.timer {
  height: 100%;
  width: $timer-display-width;
  color: $color-dark-mode-note;
  background-color: $menu-icon-background-color--light;
  border-radius: $rounded--full;
  position: relative;
  border: 2px solid $menu-icon-background-color--light;
  box-shadow: $box-shadow--light;

  &:has(:focus-visible) {
    outline: 2px solid $color-backlog-blue;
  }
}
.timer > svg {
  position: absolute;
  height: 100%;
  background-color: $color-dark-mode-note;
  color: $color-white;
  border-radius: 100%;
}

.timer > span {
  position: absolute;
  right: 0;
  left: 0;
  height: 100%;
  width: 100%;
  padding-left: $timer__content-height;
  line-height: $timer__content-height;
  text-align: center;
  font-weight: bold;
}

.timer__progress-bar {
  position: absolute;
  top: 0;
  left: calc($timer__content-height / 2);
  height: $timer__content-height;
  border-top-right-radius: $rounded--full;
  border-bottom-right-radius: $rounded--full;
  background-color: $timer__progress-bar-color;
  transition: right 250ms linear;
}

.timer__short-actions {
  height: 100%;
  width: 100%;
  position: absolute;
  border-radius: $rounded--full;
  background-color: $menu-icon-background-color--light;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  gap: $spacing--xs;
  padding-right: $spacing--xxs;
  list-style: none;
  margin: 0;
  opacity: 0;
}

.timer:has(:focus-visible) > .timer__short-actions,
.timer:hover > .timer__short-actions {
  opacity: 1;
}

.short-actions__short-action {
  position: relative;
  height: $timer__short-actions-height;
  width: $timer__short-actions-height;
  border-radius: $rounded--full;
}

.short-action__button {
  height: $timer__short-actions-height;
  width: $timer__short-actions-height;
  border-radius: $rounded--full;
  background-color: $color-lighter-gray;
  color: $color-dark-mode-note;
  border: none;
  padding: 0;
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: background-color 150ms linear;

  &:hover {
    background-color: getLightHoverBackground($color-lighter-gray);
  }

  &:focus-visible {
    outline: 2px solid $color-backlog-blue;
  }
}

.short-action__button > svg {
  position: absolute;
  height: $icon--small;
  width: $icon--small;
}
.short-action__check-icon {
  height: $timer__short-actions-height;
  width: $timer__short-actions-height;
}
.short-action__cancel-icon {
  visibility: hidden;
}
.short-action__button--ready:hover {
  > .short-action__check-icon {
    visibility: hidden;
  }
  > .short-action__cancel-icon {
    visibility: visible;
  }
}

[theme="dark"] {
  .timer {
    color: $color-white;
    background-color: $menu-icon-background-color--dark;
    border-color: $menu-icon-background-color--dark;

    &:has(:focus-visible) {
      outline: 2px solid $color-planning-pink;
    }
  }
  .timer > svg {
    background-color: $color-white;
    color: $color-dark-mode-note;
  }

  .timer__increment-button {
    color: $color-white;
    background-color: $menu-icon-background-color--dark;

    &:hover {
      background-color: getDarkHoverBackground($menu-icon-background-color--dark);
    }

    &:focus-visible {
      outline: 2px solid $color-planning-pink;
    }
  }

  .timer__short-actions {
    background-color: $menu-icon-background-color--dark;
  }

  .short-action__button {
    background-color: $color-dark-one;
    color: $color-white;

    &:hover {
      background-color: getDarkHoverBackground($color-dark-one);
    }

    &:focus-visible {
      outline: 2px solid $color-planning-pink;
    }
  }
}

// Shake animation on expired timer
.timer--expired {
  animation: shake 0.5s;
  animation-iteration-count: 10;
}
@media (prefers-reduced-motion: reduce) {
  .timer--expired > span {
    animation: none;
  }
}
@keyframes shake {
  0% {
    transform: translate(1px, 1px) rotate(0deg);
  }
  10% {
    transform: translate(-1px, -2px) rotate(-1deg);
  }
  20% {
    transform: translate(-3px, 0px) rotate(1deg);
  }
  30% {
    transform: translate(3px, 2px) rotate(0deg);
  }
  40% {
    transform: translate(1px, -1px) rotate(1deg);
  }
  50% {
    transform: translate(-1px, 2px) rotate(-1deg);
  }
  60% {
    transform: translate(-3px, 1px) rotate(0deg);
  }
  70% {
    transform: translate(3px, 1px) rotate(-1deg);
  }
  80% {
    transform: translate(-1px, -1px) rotate(1deg);
  }
  90% {
    transform: translate(1px, 2px) rotate(0deg);
  }
  100% {
    transform: translate(1px, -2px) rotate(-1deg);
  }
}

@media (hover: none) {
  .timer__short-actions {
    display: none;
  }
}

